syntax = "proto3";

import "spine/options.proto";

option java_multiple_files = true;

message ExperimentalField {
    string value = 1 [(SPI) = true];
}
